# sp1

book/generating-proofs/: proof-types.md
book/onchain-verification/: getting-started.md
examples/: Cargo.toml
examples/keccak/program/: Cargo.toml
examples/keccak/program/elf/: riscv32im-succinct-zkvm-elf
examples/keccak/program/src/: main.rs
examples/keccak/script/: Cargo.toml  proof-with-pis
examples/keccak/script/src/: main.rs
