[workspace]
[package]
name = "keccak-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = { path = "../../../crates/zkvm/entrypoint" }
sha3 = "0.10.8"

# [patch.crates-io]
# # Patch sha3 so we can use sha precompiles
# sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
